🐛 - fix link colour on mobile

--- a/pkgdown/extra.css
+++ b/pkgdown/extra.css
@@ -51,3 +51,13 @@ a {
     color: #FFA70B;
     text-decoration: none;
 }
+
+@media (max-width: 767px) {
+    .navbar-default .navbar-nav .open .dropdown-menu > li > a {
+        color: #fff;
+    }
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: #fff;
+}
